umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h3#v" "C#v4" "O#n2#v2" "O#c-#n3#v"] :bonds [[0 1 "1"] [1 2 "2"] [1 3 "1"]] :charge -1 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h3#v" "C#v4" "O#n2#v2" "O#c-#n3#v"] :bonds [[0 1 "1"] [1 2 "2"] [1 3 "1"]] :charge -1 :spin "#u0 #s1"}}}
