umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetoin.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h3#v" "1" "C#v4" "2" "O#n2#v2" "3" "C#h#v3" "4" "O#h#n2#v" "5" "C#h3#v"} :bonds [[0 1 "1"] [1 2 "2"] [1 3 "1"] [3 4 "1"] [3 5 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h3#v" "1" "C#v4" "2" "O#n2#v2" "3" "C#h#v3" "4" "O#h#n2#v" "5" "C#h3#v"} :bonds [[0 1 "1"] [1 2 "2"] [1 3 "1"] [3 4 "1"] [3 5 "1"]] :charge 0 :spin "#u0 #s1"}}}
