umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetyl-fluoride.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#v4" "O#n2#v2" "F#n3#v"]
      :bonds [[0 1 :single] [1 2 :double] [1 3 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#v4" "O#n2#v2" "F#n3#v"]
      :bonds [[0 1 :single] [1 2 :double] [1 3 :single]]}
    :success true}}
